--- a/R/C14 hot figures.Rmd
+++ b/R/C14 hot figures.Rmd
@@ -179,7 +179,7 @@ The following edits made to Nano data:
       
 ```{r}
 # Changed the excel sheet read, with final dpm and DIC values
-C14_DPM_nano <- readxl::read_excel("TAN1810_14C-Pico_25052020_QA_1.0.xlsx", sheet = "Complete data TAN1810", skip = 11)%>% 
+C14_DPM_nano <- readxl::read_excel("../data_used/TAN1810_14C-Pico_25052020_QA_1.0.xlsx", sheet = "Complete data TAN1810", skip = 11)%>% 
   dplyr::select (`Cycle#`, `EXP#`, SAMPLE, `Vial code             (i - initials, A to C - light incubation, D - dark)`, `sorting population`, `Cells sorted`, DPM1, DIC, `SA_dpm_mL`) %>%   
      rename(cycle = `Cycle#`,
             exp = `EXP#`,
@@ -396,7 +396,7 @@ c14_figure <- ggarrange(
   ncol = 1, nrow = 3,
   align = "v") 
 
-ggsave("c14_figure_1.png")
+ggsave("../figures/c14_figure_1.png")
 
 
 c14_figure
