--- a/R/C14 cold.Rmd
+++ b/R/C14 cold.Rmd
@@ -18,23 +18,24 @@ library(ggplot2)
 library(broom)
 library(ggpubr)
 library(stringr)
+library(RColorBrewer)
 ```
 
-# 1. Read table for C14 cold values, merge for cycle and experiment number. Add new column to indicate dark.
+# Read table for C14 cold values, merge for cycle and experiment number. Add new column to indicate dark.
 ```{r}
 C14_cold_raw <- readxl::read_excel("../data_used/TAN1810_14C-Pico_25052020_QA_1.0.xlsx", sheet = "Cold 14C - Pico Results", skip = 5,  n_max = 93) %>%
   select (`Unique code or sample identifier`,`Station`,`Depth m`, `Sample ID`, `DPM to full volume`, `SA_dpm_mL`, `DIC`, `NPP_cold`, `NPP_standard`)  %>%
-  rename(name = `Unique code or sample identifier`,
+  dplyr::rename(name = `Unique code or sample identifier`,
             station = `Station`,
             depth = `Depth m`,
             sample_id = `Sample ID`,
             DPM_full = `DPM to full volume`,
             SA = `SA_dpm_mL`) %>%
-   add_column(dark = NA)
-           #mutate(dark = case_when (str_detect(name,"D") ~ TRUE, TRUE~FALSE))
+   add_column(dark = NA) %>% #mutate(dark = case_when (str_detect(name,"D") ~ TRUE, TRUE~FALSE))
+  filter(!(depth == 200))
   C14_hot <- readxl::read_excel("../data_used/TAN1810_14C-Pico_25052020_QA_1.0.xlsx", sheet = "Complete data TAN1810", skip = 11) %>%
   dplyr::select (`Cycle#`, `EXP#`, `SAMPLE`, `STN`, `DEPTH`) %>%   
-     rename(cycle = `Cycle#`,
+     dplyr::rename(cycle = `Cycle#`,
             exp = `EXP#`,
             sample = `SAMPLE`, 
             station = `STN`,
@@ -71,19 +72,19 @@ Calculations for NPP_cold and NPP_standard have already been done. Assume that t
 cold_dark_NPP <- C14_cold %>% 
   filter(dark == "dark") %>%
   filter(!(cycle ==3 & exp == 7)) %>%#very high values. Check if it is a dark vial?
-  rename(NPP_cold_dark = NPP_cold)  %>%
-  rename(NPP_standard_dark = NPP_standard)%>%
-  select(cycle, exp, sample, NPP_cold_dark, NPP_standard_dark)
+  dplyr::rename(NPP_cold_dark = NPP_cold)  %>%
+  dplyr::rename(NPP_standard_dark = NPP_standard)%>%
+  select(cycle, exp, sample,NPP_cold_dark, NPP_standard_dark)
 cold_dark_NPP
 # Check the values of dpm dark with histogram. The values are normally distributed, concentrated around the mean.
 hist(cold_dark_NPP$NPP_cold_dark)
 hist(cold_dark_NPP$NPP_standard_dark)
 mean(cold_dark_NPP$NPP_cold_dark)
 mean(cold_dark_NPP$NPP_standard_dark, na.rm = TRUE) #ignore NA values
-#means are ok
 ```
 Means are ok, dark values are low.
 
+# corrected values = light - dark
 ```{r}
 cold_corrected <- full_join(C14_cold,cold_dark_NPP) %>% 
   filter (dark == "light") %>% 
@@ -94,31 +95,245 @@ cold_corrected <- full_join(C14_cold,cold_dark_NPP) %>%
   mutate(NPP_standard_dark = case_when (is.na(NPP_standard_dark) ~ mean(NPP_standard_dark, na.rm = TRUE), TRUE ~ NPP_standard_dark))  %>%
   mutate(NPP_cold_corrected = NPP_cold - NPP_cold_dark)%>%
   mutate(NPP_standard_corrected = NPP_standard - NPP_standard_dark) %>%
-  select(cycle, exp, sample,  station, depth,NPP_cold_corrected,NPP_standard_corrected)
+  select(cycle, exp, sample,  station, depth, name, NPP_cold_corrected,NPP_standard_corrected)
 
 cold_corrected
 ```
 
+# NPP standard vs cold for each experiment
 ```{r}
 cold_mean_vial<- cold_corrected %>%
   group_by(cycle, exp, sample) %>%
-  summarise(NPP_cold_mean = mean(NPP_cold_corrected, na.rm = TRUE))
+  dplyr::summarise(NPP_cold_mean = mean(NPP_cold_corrected, na.rm = TRUE))%>%
+  ungroup()
+
 cold_mean_standard <- cold_corrected %>%
   group_by(cycle, exp, sample) %>%
-  summarise(NPP_standard_mean = mean(NPP_standard_corrected, na.rm = TRUE))
+  dplyr::summarise(NPP_standard_mean = mean(NPP_standard_corrected, na.rm = TRUE))
 
 cold_mean <- full_join (cold_mean_standard,cold_mean_vial)%>%
-  mutate(difference = NPP_standard_mean - NPP_cold_mean)
+  mutate(difference = NPP_standard_mean - NPP_cold_mean) %>%
+  mutate(cycle_name = recode(cycle, "1" = "Subantarctic 1",
+                                    "2" = "Subantarctic 2",
+                                    "3" = "Subtropical 1",
+                                    "4" = "Subtropical 2",
+                                    "5" = "Subantarctic 3")) %>% 
+  mutate(exp_name = recode(exp, "2" = "SA1, exp 2",
+                                "3" = "SA2, exp 3",
+                                "4" = "SA2, exp 4",
+                                "5" = "SA2, exp 5",
+                                "6" = "SA2, exp 6",
+                                "7" = "ST1, exp 7",
+                                "8" = "ST1, exp 8",
+                                "9" = "ST2, exp 9",
+                                "10" = "ST2, exp 10",
+                                "11" = "SA3, exp 11"))%>%
+  mutate(exp_name = case_when (is.na(exp_name) ~ "SA3",
+                               TRUE ~ exp_name)) %>%
+  dplyr::rename(standard=NPP_standard_mean)%>%
+  dplyr::rename(cold=NPP_cold_mean) %>%
+  select(cycle, cycle_name, exp, exp_name, sample, standard, cold, difference)%>%
+  arrange(exp_name)
+cold_mean_pivot <- cold_mean %>%
+  pivot_longer(standard:cold,
+               names_to = "type",
+               values_to = "NPP")
 cold_mean
+cold_mean_pivot
 ```
 
+summary statistics
+```{r}
+summary_table <- cold_mean %>% 
+  group_by(cycle, sample) %>% 
+  summarise(standard_mean = mean(standard))%>%
+  ungroup()
+summary_table
+```
 
+```{r}
+#for error bars
+data_summary <- function(data, varname, groupnames){
+  require(plyr)
+  summary_func <- function(x, col){
+    c(mean = mean(x[[col]], na.rm=TRUE),
+      sd = sd(x[[col]], na.rm=TRUE))
+  }
+  data_sum<-ddply(data, groupnames, .fun=summary_func,
+                  varname)
+  data_sum <- rename(data_sum, c("mean" = varname))
+ return(data_sum)
+}
+
+df3 <- data_summary(cold_mean_pivot, varname="NPP", 
+                    groupnames=c("type", "cycle_name"))
+df3$cycle_name=as.factor(df3$cycle_name)
+head(df3)
+
+cold_mean_bar <- ggplot(data=df3, aes(x=cycle_name, y=NPP, fill=type))+
+  geom_bar(stat="identity", color="black", position=position_dodge()) +
+  theme_bw()+  
+  geom_errorbar(aes(ymin=NPP, ymax=NPP+sd), width=.2,
+                 position=position_dodge(.9)) +
+  ylab("Net Primary Production (mgC/m3/day)")+
+  xlab("Cycle") +
+  labs(fill="Experiment type")+
+  scale_fill_brewer(palette = "Set2")
+
+
+ggsave("../figures/c14_cold_all.png", width = 7, height = 4)
+
+
+cold_mean_bar               
+```
+Overall difference betwen cold and standard. In this graph the difference does not look too big, but it is masked by combining the surface and DCM together. 
+
+#experiments
+```{r}
+#for error bars
+data_summary_1 <- function(data, varname, groupnames){
+  require(plyr)
+  summary_func <- function(x, col){
+    c(mean = mean(x[[col]], na.rm=TRUE),
+      sd = sd(x[[col]], na.rm=TRUE))
+  }
+  data_sum<-ddply(data, groupnames, .fun=summary_func,
+                  varname)
+  data_sum <- rename(data_sum, c("mean" = varname))
+ return(data_sum)
+}
+
+df4 <- data_summary_1(cold_mean_pivot, varname="NPP", 
+                    groupnames=c("type", "exp_name"))
+df4$exp=as.factor(df4$exp)
+
+head(df4)
+cold_mean_pivot$exp <- factor(cold_mean_pivot$exp,levels = c("3", "4", "5", "6", "7", "8", "1", "2", "9", "10", "11"))
+cold_exp_bar <- ggplot(data=df4, aes(x=exp_name, y=NPP, fill=type))+
+  geom_bar(stat="identity", position=position_dodge()) +
+  theme_bw()+  
+  geom_errorbar(aes(ymin=NPP-sd, ymax=NPP+sd), width=.2,
+                 position=position_dodge(.9)) +
+  ylab("Net Primary Production (mgC/m3/day)")+
+  xlab("Experiment") +
+  labs(fill="Experiment type")+
+  scale_fill_brewer(palette = "Set2")
+
+cold_exp_bar
+```
+Looking at experiments, the difference does not look big either.
+
+Comparing standard vs cold experiment, keeping either surface or DCM constant
+```{r}
+
+cold_surface <- cold_mean_pivot %>%
+  filter(sample == "SUR")
+
+surface_plot <- ggplot(data=cold_surface, aes(x=exp_name, y= NPP, fill = type))+
+  geom_bar(stat="identity", position=position_dodge())+
+  theme_bw()+
+  ylab("Net Primary Production (mgC/m3/day)")+
+  xlab("Experiment") +
+  labs(fill="Experiment type", title = "NPP at surface")+
+  scale_fill_brewer(palette = "Set2")+
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+surface_plot
+
+ggsave("../figures/c14_cold_surface.png", width = 7, height = 4)
+
+cold_dcm <- cold_mean_pivot %>%
+  filter(sample =="DCM")
+DCM_plot <- ggplot(data=cold_dcm, aes(x=exp_name, y= NPP, fill = type))+
+  geom_bar(stat="identity", position=position_dodge())+
+  theme_bw()+
+  ylab("Net Primary Production (mgC/m3/day)")+
+  xlab("Experiment") +
+  labs(fill="Experiment type", title = "NPP at DCM")+
+  scale_fill_brewer(palette = "Set2")+
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+DCM_plot
+
+ggsave("../figures/c14_cold_DCM.png", width = 7, height = 4)
+```
+
+surface vs DCM, keeping the type of experiment (standard/cold) constant.
+```{r}
+cold_mean$sample <- factor(cold_mean$sample,levels = c("SUR", "DCM"))
+
+#standard values only
+cold_standard_plot <- 
+  ggplot(data=cold_mean, aes(x=exp_name, y= standard, fill = sample))+
+  geom_bar(stat="identity", position=position_dodge())+
+  theme_bw()+
+  ylab("Net Primary Production (mgC/m3/day)")+
+  xlab("Experiment") +
+  labs(fill="Depth", title = "NPP of standard cold experiment")+
+  scale_fill_brewer(palette = "Set2") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+cold_standard_plot
+
+ggsave("../figures/c14_cold_standard.png", width = 7, height = 4)
+
+#cold values only
+cold_plot <- ggplot(data=cold_mean, aes(x=exp_name, y= cold, fill = sample))+
+  geom_bar(stat="identity", position=position_dodge())+
+  theme_bw()+
+  ylab("Net Primary Production (mgC/m3/day)")+
+  xlab("Experiment") +
+  labs(fill="Depth", title = "NPP of cold experiment")+
+  scale_fill_brewer(palette = "Set2")+
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+cold_plot
+
+ggsave("../figures/c14_cold_cold.png", width = 7, height = 4)
+```
+
+# To check the replicates of those with large differences.
 ```{r}
 C14_cold_2 <- cold_corrected %>%
   mutate(difference = NPP_cold_corrected - NPP_standard_corrected)
 C14_cold_2
 ```
 The units is (mgC/m3/day).
+
+Only standard cold
+```{r}
+#for error bars
+data_summary_w <- function(data, varname, groupnames){
+  require(plyr)
+  summary_func <- function(x, col){
+    c(mean = mean(x[[col]], na.rm=TRUE),
+      sd = sd(x[[col]], na.rm=TRUE))
+  }
+  data_sum<-ddply(data, groupnames, .fun=summary_func,
+                  varname)
+  data_sum <- rename(data_sum, c("mean" = varname))
+ return(data_sum)
+}
+
+df2 <- data_summary_w(cold_mean, varname="standard", 
+                    groupnames=c("sample", "cycle_name"))
+df2$cycle_name=as.factor(df2$cycle_name)
+
+head(df2)
+#standard values only
+cold_standard_cycle_plot <- 
+  ggplot(data=df2, aes(x=cycle_name, y= standard, fill = sample))+
+  geom_bar(stat="identity", position=position_dodge())+
+  theme_bw()+
+  geom_errorbar(aes(ymin=standard-sd, ymax=standard+sd), width=.2,
+                 position=position_dodge(.9)) +
+  ylab("Net Primary Production (mgC/m3/day)")+
+  xlab("Cycle") +
+  labs(fill="Depth", title = "NPP of standard")+
+  scale_fill_brewer(palette = "Set2") 
+cold_standard_cycle_plot
+
+ggsave("../figures/c14_cold_cycle_standard.png", width = 7, height = 4)
+
+```
+
+
 
 cycle 3: exp 7 : surface and DCM have very large differences (22-24) between standard and cold. 
 - for DCM standard is too low compared to cold.
@@ -131,6 +346,8 @@ Cycle 4: exp 10 : surface and DCM also have moderate differences (around 8).
 
 The rest are similar, usually <1, maximum 5. 
 cycle 1: exp 2: SUR, one has difference of 12.9. Cold is higher. - remove?
+
+
 
 standard fractionated?- from Andres
 - to get standard fractionated NPP 
