--- a/R/C14 hot figures.Rmd
+++ b/R/C14 hot figures.Rmd
@@ -59,7 +59,7 @@ The following edits made to pico and syn data:
 ```{r}
 C14_DPM <- readxl::read_excel("../data_used/TAN1810_14C-Pico_25052020_QA_1.0.xlsx", sheet = "Complete data TAN1810", skip = 11) %>%
   dplyr::select (`Cycle#`, `EXP#`, SAMPLE, `Vial code             (i - initials, A to C - light incubation, D - dark)`, `sorting population`, `Cells sorted`, DPM1, DIC, `SA_dpm_mL`) %>%   
-     rename(cycle = `Cycle#`,
+     dplyr::rename(cycle = `Cycle#`,
             exp = `EXP#`,
             sample = SAMPLE, 
             vial = `Vial code             (i - initials, A to C - light incubation, D - dark)`, 
@@ -418,6 +418,7 @@ cycle_table_1 <- pp_cal_1_join_edit %>%
   summarise(pp_mean = mean(pp_filtered, na.rm = TRUE)) %>%
   pivot_wider(names_from = cycle_name, values_from = pp_mean)
 cycle_table_1
+write.xlsx(cycle_table_1)
 ```
 Pico and Syn values are too low.
 
