--- a/R/C14 hot.Rmd
+++ b/R/C14 hot.Rmd
@@ -182,7 +182,7 @@ Edits to be made:
       
 ```{r}
 # Changed the excel sheet read, with final dpm and DIC values
-C14_DPM_nano <- readxl::read_excel("TAN1810_14C-Pico_25052020_QA_1.0.xlsx", sheet = "Complete data TAN1810", skip = 11)%>% 
+C14_DPM_nano <- readxl::read_excel("../data_used/TAN1810_14C-Pico_25052020_QA_1.0.xlsx", sheet = "Complete data TAN1810", skip = 11)%>% 
   dplyr::select (`Cycle#`, `EXP#`, SAMPLE, `Vial code             (i - initials, A to C - light incubation, D - dark)`, `sorting population`, `Cells sorted`, DPM1, DIC, `SA_dpm_mL`) %>%   
      rename(cycle = `Cycle#`,
             exp = `EXP#`,
@@ -353,13 +353,6 @@ exp_boxplot <- ggplot(pp_cal_1_join, aes(x = exp, y=pp, fill=population)) +
                  scale_y_continuous(trans='log10') +
                  ylab("Primary Production (fgC/h/cell)") 
 exp_boxplot
-controlling overall appearence, r cookbook
-theme_bw
-facet_wrap
-
-david mah code from green edge    
-
-counter plot for nutrients
 ```
 
 # Analysis based on Surface vs DCM
