--- a/R/C14 cold.Rmd
+++ b/R/C14 cold.Rmd
@@ -21,7 +21,12 @@ library(stringr)
 library(RColorBrewer)
 ```
 
-# Read table for C14 cold values, merge for cycle and experiment number. Add new column to indicate dark.
+Denise - Comments on 10 March 2021: 
+- The units is (mgC/m3/day).
+- cycle 3: exp 7 dark values are very high.
+- How to calculate integrated PP rates??
+
+# Read table for C14 cold values, merge for cycle and experiment number. Add new column to indicate dark. Added missing cycle and experiment information based on voyage report.
 ```{r}
 C14_cold_raw <- readxl::read_excel("../data_used/TAN1810_14C-Pico_25052020_QA_1.0.xlsx", sheet = "Cold 14C - Pico Results", skip = 5,  n_max = 93) %>%
   select (`Unique code or sample identifier`,`Station`,`Depth m`, `Sample ID`, `DPM to full volume`, `SA_dpm_mL`, `DIC`, `NPP_cold`, `NPP_standard`)  %>%
@@ -33,7 +38,8 @@ C14_cold_raw <- readxl::read_excel("../data_used/TAN1810_14C-Pico_25052020_QA_1.
             SA = `SA_dpm_mL`) %>%
    add_column(dark = NA) %>% #mutate(dark = case_when (str_detect(name,"D") ~ TRUE, TRUE~FALSE))
   filter(!(depth == 200))
-  C14_hot <- readxl::read_excel("../data_used/TAN1810_14C-Pico_25052020_QA_1.0.xlsx", sheet = "Complete data TAN1810", skip = 11) %>%
+#use the "complete data TAN1810" sheet for the experiment details.
+C14_hot <- readxl::read_excel("../data_used/TAN1810_14C-Pico_25052020_QA_1.0.xlsx", sheet = "Complete data TAN1810", skip = 11) %>%
   dplyr::select (`Cycle#`, `EXP#`, `SAMPLE`, `STN`, `DEPTH`) %>%   
      dplyr::rename(cycle = `Cycle#`,
             exp = `EXP#`,
@@ -41,6 +47,7 @@ C14_cold_raw <- readxl::read_excel("../data_used/TAN1810_14C-Pico_25052020_QA_1.
             station = `STN`,
             depth = `DEPTH`)%>%
     distinct()
+
 C14_cold <- right_join(C14_hot, C14_cold_raw) %>%
   na_if("missing")
 C14_cold$cycle <- as.character(C14_cold$cycle) 
@@ -63,15 +70,16 @@ C14_cold$sample[grep("12", C14_cold$name)] = "SUR"
 C14_cold$sample[grep("60", C14_cold$name)] = "DCM"
 C14_cold$cycle[grep("U9136", C14_cold$name)] = "2"
 C14_cold$exp[grep("U9136", C14_cold$name)] = "6"
+
 C14_cold
 ```
 Calculations for NPP_cold and NPP_standard have already been done. Assume that the values are correct.
 
-#remove dark values
+# remove dark values
 ```{r}
 cold_dark_NPP <- C14_cold %>% 
   filter(dark == "dark") %>%
-  filter(!(cycle ==3 & exp == 7)) %>%#very high values. Check if it is a dark vial?
+  filter(!(cycle ==3 & exp == 7)) %>% #very high values. Check if it is a dark vial?
   dplyr::rename(NPP_cold_dark = NPP_cold)  %>%
   dplyr::rename(NPP_standard_dark = NPP_standard)%>%
   select(cycle, exp, sample,NPP_cold_dark, NPP_standard_dark)
@@ -80,11 +88,11 @@ cold_dark_NPP
 hist(cold_dark_NPP$NPP_cold_dark)
 hist(cold_dark_NPP$NPP_standard_dark)
 mean(cold_dark_NPP$NPP_cold_dark)
-mean(cold_dark_NPP$NPP_standard_dark, na.rm = TRUE) #ignore NA values
+mean(cold_dark_NPP$NPP_standard_dark, na.rm = TRUE) #na.rm function to ignore NA values
 ```
 Means are ok, dark values are low.
 
-# corrected values = light - dark
+# Corrected values = light - dark (same method as C14 hot calculations)
 ```{r}
 cold_corrected <- full_join(C14_cold,cold_dark_NPP) %>% 
   filter (dark == "light") %>% 
@@ -100,7 +108,7 @@ cold_corrected <- full_join(C14_cold,cold_dark_NPP) %>%
 cold_corrected
 ```
 
-# NPP standard vs cold for each experiment
+#Rename and reorganise the table. The NPP of each experiment is the mean of the replicates.
 ```{r}
 cold_mean_vial<- cold_corrected %>%
   group_by(cycle, exp, sample) %>%
@@ -134,6 +142,7 @@ cold_mean <- full_join (cold_mean_standard,cold_mean_vial)%>%
   dplyr::rename(cold=NPP_cold_mean) %>%
   select(cycle, cycle_name, exp, exp_name, sample, standard, cold, difference)%>%
   arrange(exp_name)
+
 cold_mean_pivot <- cold_mean %>%
   pivot_longer(standard:cold,
                names_to = "type",
@@ -142,18 +151,19 @@ cold_mean
 cold_mean_pivot
 ```
 
-summary statistics
+#summary statistics - something wrong here. Object cold not found
 ```{r}
 summary_table <- cold_mean %>% 
   group_by(cycle, sample) %>% 
   summarise(standard_mean = mean(standard))%>%
-  ungroup()
+  summarise(cold_mean = mean(cold)) 
 summary_table
 ```
 
+## Cold vs standard between cycles. Data is using the means of each experiment. Error bars are the differences between each experiment, do not reflect the differences between replicates.
 ```{r}
 #for error bars
-data_summary <- function(data, varname, groupnames){
+data_summary_1 <- function(data, varname, groupnames){
   require(plyr)
   summary_func <- function(x, col){
     c(mean = mean(x[[col]], na.rm=TRUE),
@@ -165,12 +175,12 @@ data_summary <- function(data, varname, groupnames){
  return(data_sum)
 }
 
-df3 <- data_summary(cold_mean_pivot, varname="NPP", 
+df1 <- data_summary_1(cold_mean_pivot, varname="NPP", 
                     groupnames=c("type", "cycle_name"))
-df3$cycle_name=as.factor(df3$cycle_name)
-head(df3)
+df1$cycle_name=as.factor(df1$cycle_name)
+head(df1)
 
-cold_mean_bar <- ggplot(data=df3, aes(x=cycle_name, y=NPP, fill=type))+
+cold_mean_bar <- ggplot(data=df1, aes(x=cycle_name, y=NPP, fill=type))+
   geom_bar(stat="identity", color="black", position=position_dodge()) +
   theme_bw()+  
   geom_errorbar(aes(ymin=NPP, ymax=NPP+sd), width=.2,
@@ -186,12 +196,12 @@ ggsave("../figures/c14_cold_all.png", width = 7, height = 4)
 
 cold_mean_bar               
 ```
-Overall difference betwen cold and standard. In this graph the difference does not look too big, but it is masked by combining the surface and DCM together. 
+Overall difference betwen cold and standard. In this graph the difference does not look too big, but it is masked by combining the surface and DCM together, and some experiments in the same cycle have very large differences between them 
 
-#experiments
+## Cold vs standard between experiments. Data is using the means of each experiment. Error bars are the differences between surface and DCM, do not reflect the differences between replicates. Difficult to see, not useful diagram.
 ```{r}
 #for error bars
-data_summary_1 <- function(data, varname, groupnames){
+data_summary_2 <- function(data, varname, groupnames){
   require(plyr)
   summary_func <- function(x, col){
     c(mean = mean(x[[col]], na.rm=TRUE),
@@ -203,13 +213,14 @@ data_summary_1 <- function(data, varname, groupnames){
  return(data_sum)
 }
 
-df4 <- data_summary_1(cold_mean_pivot, varname="NPP", 
+df2 <- data_summary_2(cold_mean_pivot, varname="NPP", 
                     groupnames=c("type", "exp_name"))
-df4$exp=as.factor(df4$exp)
+df2$exp=as.factor(df2$exp)
 
-head(df4)
+head(df2)
+
 cold_mean_pivot$exp <- factor(cold_mean_pivot$exp,levels = c("3", "4", "5", "6", "7", "8", "1", "2", "9", "10", "11"))
-cold_exp_bar <- ggplot(data=df4, aes(x=exp_name, y=NPP, fill=type))+
+cold_exp_bar <- ggplot(data=df2, aes(x=exp_name, y=NPP, fill=type))+
   geom_bar(stat="identity", position=position_dodge()) +
   theme_bw()+  
   geom_errorbar(aes(ymin=NPP-sd, ymax=NPP+sd), width=.2,
@@ -223,40 +234,116 @@ cold_exp_bar
 ```
 Looking at experiments, the difference does not look big either.
 
-Comparing standard vs cold experiment, keeping either surface or DCM constant
-```{r}
+#Comparing standard vs cold experiment, keeping either surface or DCM constant. Use cold_corrected for error bars of replicates.
 
-cold_surface <- cold_mean_pivot %>%
+```{r}
+#Edit data frame "cold_corrected" with replicates
+cold_corrected_1 <- cold_corrected %>%
+  mutate(difference = NPP_standard_corrected - NPP_cold_corrected) %>%
+  mutate(cycle_name = recode(cycle, "1" = "Subantarctic 1",
+                                    "2" = "Subantarctic 2",
+                                    "3" = "Subtropical 1",
+                                    "4" = "Subtropical 2",
+                                    "5" = "Subantarctic 3")) %>% 
+  mutate(exp_name = recode(exp, "2" = "SA1, exp 2",
+                                "3" = "SA2, exp 3",
+                                "4" = "SA2, exp 4",
+                                "5" = "SA2, exp 5",
+                                "6" = "SA2, exp 6",
+                                "7" = "ST1, exp 7",
+                                "8" = "ST1, exp 8",
+                                "9" = "ST2, exp 9",
+                                "10" = "ST2, exp 10",
+                                "11" = "SA3, exp 11"))%>%
+  mutate(exp_name = case_when (is.na(exp_name) ~ "SA3",
+                               TRUE ~ exp_name))%>%
+  select(cycle, cycle_name, exp, exp_name, sample, NPP_standard_corrected, NPP_cold_corrected)%>%
+  arrange(exp_name)
+cold_corrected_pivot <- cold_corrected_1 %>%
+  pivot_longer(NPP_standard_corrected:NPP_cold_corrected,
+               names_to = "type",
+               values_to = "NPP")
+```
+
+# Cold vs standard at surface
+```{r}
+cold_surface <- cold_corrected_pivot %>%
   filter(sample == "SUR")
 
-surface_plot <- ggplot(data=cold_surface, aes(x=exp_name, y= NPP, fill = type))+
+data_summary_3 <- function(data, varname, groupnames){
+  require(plyr)
+  summary_func <- function(x, col){
+    c(mean = mean(x[[col]], na.rm=TRUE),
+      sd = sd(x[[col]], na.rm=TRUE))
+  }
+  data_sum<-ddply(data, groupnames, .fun=summary_func,
+                  varname)
+  data_sum <- rename(data_sum, c("mean" = varname))
+ return(data_sum)
+}
+
+df3 <- data_summary_3(cold_surface, varname="NPP", 
+                    groupnames=c("type", "exp_name"))
+df3$exp=as.factor(df3$exp)
+
+head(df3)
+
+surface_plot <- ggplot(data=df3, aes(x=exp_name, y= NPP, fill = type))+
   geom_bar(stat="identity", position=position_dodge())+
   theme_bw()+
   ylab("Net Primary Production (mgC/m3/day)")+
   xlab("Experiment") +
   labs(fill="Experiment type", title = "NPP at surface")+
   scale_fill_brewer(palette = "Set2")+
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
+  geom_errorbar(aes(ymin=NPP-sd, ymax=NPP+sd), width=.2,
+                 position=position_dodge(.9))
 surface_plot
 
 ggsave("../figures/c14_cold_surface.png", width = 7, height = 4)
+```
 
-cold_dcm <- cold_mean_pivot %>%
+#Cold vs standard at DCM
+```{r}
+
+cold_dcm <- cold_corrected_pivot %>%
   filter(sample =="DCM")
-DCM_plot <- ggplot(data=cold_dcm, aes(x=exp_name, y= NPP, fill = type))+
+
+data_summary_4 <- function(data, varname, groupnames){
+  require(plyr)
+  summary_func <- function(x, col){
+    c(mean = mean(x[[col]], na.rm=TRUE),
+      sd = sd(x[[col]], na.rm=TRUE))
+  }
+  data_sum<-ddply(data, groupnames, .fun=summary_func,
+                  varname)
+  data_sum <- rename(data_sum, c("mean" = varname))
+ return(data_sum)
+}
+
+df4 <- data_summary_4(cold_dcm, varname="NPP", 
+                    groupnames=c("type", "exp_name"))
+df4$exp=as.factor(df4$exp)
+
+head(df4)
+
+
+DCM_plot <- ggplot(data=df4, aes(x=exp_name, y= NPP, fill = type))+
   geom_bar(stat="identity", position=position_dodge())+
   theme_bw()+
   ylab("Net Primary Production (mgC/m3/day)")+
   xlab("Experiment") +
   labs(fill="Experiment type", title = "NPP at DCM")+
   scale_fill_brewer(palette = "Set2")+
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))+
+  geom_errorbar(aes(ymin=NPP-sd, ymax=NPP+sd), width=.2,
+                 position=position_dodge(.9))
 DCM_plot
 
 ggsave("../figures/c14_cold_DCM.png", width = 7, height = 4)
 ```
 
-surface vs DCM, keeping the type of experiment (standard/cold) constant.
+surface vs DCM, keeping the type of experiment (standard vs cold) constant.
 ```{r}
 cold_mean$sample <- factor(cold_mean$sample,levels = c("SUR", "DCM"))
 
@@ -288,13 +375,6 @@ cold_plot
 ggsave("../figures/c14_cold_cold.png", width = 7, height = 4)
 ```
 
-# To check the replicates of those with large differences.
-```{r}
-C14_cold_2 <- cold_corrected %>%
-  mutate(difference = NPP_cold_corrected - NPP_standard_corrected)
-C14_cold_2
-```
-The units is (mgC/m3/day).
 
 Only standard cold
 ```{r}
