--- a/R/C14 nutrients.Rmd
+++ b/R/C14 nutrients.Rmd
@@ -38,3 +38,457 @@ library("AquaEnv")
 library("gsw")
 ```
 
+# Read table, combine with C14 hot for the cycle, exp and station number.
+```{r}
+nutrients_raw <- readxl::read_excel("../data_used/TAN1810_nutrients.xls") %>%
+  dplyr::rename(CTD = `U_Cast`,
+                depth =`Depth`)
+CTD_raw <- readxl::read_excel("../data_used/TK_CTD Downcasts.xlsx") %>%
+  dplyr::rename(CTD = `cast`) %>%
+  mutate(datetime =  dmy_hms(datetime)) %>%
+  filter(!is.na(t)) %>%
+  mutate(date = date(datetime)) %>%
+  #mutate(time = hour(datetime)) %>%
+  mutate(julian_day = julian(date, origin = date("2018-01-01"))) %>%
+  select(CTD, datetime, date, julian_day) %>%
+  mutate(CTD=as.character(CTD)) %>%
+  distinct()
+nutrients <- full_join(nutrients_raw,CTD_raw) %>%
+  filter(!is.na(depth)) %>%
+  filter(!is.na(julian_day)) #how to insert date for the missing dates. Corresponding CTD no. is 9167, 9171, 9169, 9168
+nutrients
+CTD_p <- CTD %>%
+  filter(p <= 500)
+
+nutrients_depth <- nutrients %>%
+  filter(depth<=200)
+```
+
+#Dissolved Reactive Phosphorus (uM) (DRP uM)  contour plot
+```{r}
+x <- nutrients%>% select (julian_day, depth)
+y <- nutrients$DRP_uM
+
+scaling_factor=15
+
+#Creating polygon and Grid for Raster 
+
+xmin_gg=as.Date("2018-10-22")
+xmax_gg=as.Date("2018-11-19")
+
+xmin <- min(nutrients$julian_day) - 2
+xmax <- max(nutrients$julian_day) + 2
+ymax <- 200
+ymin <- 0
+# Create binding polygon
+
+  x_coord <- c(xmin,
+               xmin,
+               xmax,
+               xmax,
+               xmin)
+  y_coord <- c(ymin,
+               ymax,
+               ymax,
+               ymin,
+               ymin)
+  polygon <- cbind(x_coord, y_coord)
+  polygon <- sp::Polygon(polygon)
+  
+  polygons = sp::SpatialPolygons(list(sp::Polygons(list(polygon), "s1")))
+  # plot(polygons)
+  
+  # Create grid
+  
+  gridint <- 1 # Multiplyong factor to increase the resolution of the grid
+  gridx <- (xmax-xmin + 1)*gridint
+  gridy <- round((ymax-ymin +1 )*gridint)
+  grid <- raster::raster(nrows= gridy, ncols=gridx, 
+                         xmn=xmin, 
+                         xmx=xmax, 
+                         ymn=ymin, ymx=ymax)
+
+
+#Using KRIGE fitting to interpolate grid
+
+# fit
+  fit_krig <- fields::Krig(x, y, theta=100)
+  #this part takes too long.
+
+# look at the surface
+# fields::surface(fit_krig, type="C") 
+
+# interpolate to the raster grid
+grid_krig <- raster::interpolate(grid, fit_krig)
+
+# Mask the grid
+grid_krig <- raster::mask(x=grid_krig, mask=polygons)
+
+# Plot the interpolation
+# raster::plot(grid_krig)
+
+# Transform to data frame for ggplot
+
+val <- data.frame(p_fit = raster::getValues(grid_krig))
+xy <- as.data.frame(raster::xyFromCell(grid_krig,1:raster::ncell(grid_krig)))
+grid_p_krig <- bind_cols(xy,val) %>%   
+  mutate(date=as_date(x, origin="2018-01-01"), 
+         p_fit = if_else(p_fit <0,0,p_fit) ) %>%
+  dplyr::rename(depth_m=y) %>% 
+  filter(!is.na(p_fit))
+
+# Plot with ggplot
+  
+phosphorus <- ggplot(grid_p_krig, aes(x=date, y=depth_m)) +
+        geom_raster(mapping=aes(fill = p_fit)) + 
+        geom_contour(data = grid_p_krig, mapping = aes(z=p_fit), colour = "blue", 
+                               breaks = c(seq(0.15, 0.55, 0.1))) +
+        scale_fill_distiller(palette = "Spectral") +
+        scale_x_date(limits=c(xmin_gg,xmax_gg),
+                     date_breaks = "1 week", 
+                     date_minor_breaks = "1 day", 
+                     date_labels =  "%d/%m/%y") +
+        scale_y_reverse() +
+        geom_point(data=nutrients_depth, 
+        mapping=aes(x=date, y=depth), size=0.5, color="white") +
+        ggtitle("Phosphorus uM, contours = 0.15, 0.25, 0.35, 0.45, 0.55")  +
+        xlab("Date") + ylab("Depth (m)") +
+        theme(panel.border = element_rect(colour = "black") ) +
+        theme_bw(scaling_factor) +
+        labs(fill = "PO4 (uM)") +    
+        theme(axis.text=element_text(size=28),
+        axis.title=element_text(size=28,face="bold"),
+        legend.title =element_text(size=28,face="bold"),
+        legend.text = element_text(size=20),        
+        title = element_text(size=28, face = "bold", hjust = 0.5))
+        #+geom_vline(xintercept = "2018-10-25")
+plot(phosphorus)
+
+ggsave("../figures/CTD_phosphorus.png")
+
+```
+
+#Ammonia  (NH4 uM)  contour plot
+```{r}
+x <- nutrients%>% select (julian_day, depth)
+y <- nutrients$NH4_uM
+
+scaling_factor=15
+
+#Creating polygon and Grid for Raster 
+
+xmin_gg=as.Date("2018-10-22")
+xmax_gg=as.Date("2018-11-19")
+
+xmin <- min(nutrients$julian_day) - 2
+xmax <- max(nutrients$julian_day) + 2
+ymax <- 200
+ymin <- 0
+# Create binding polygon
+
+  x_coord <- c(xmin,
+               xmin,
+               xmax,
+               xmax,
+               xmin)
+  y_coord <- c(ymin,
+               ymax,
+               ymax,
+               ymin,
+               ymin)
+  polygon <- cbind(x_coord, y_coord)
+  polygon <- sp::Polygon(polygon)
+  
+  polygons = sp::SpatialPolygons(list(sp::Polygons(list(polygon), "s1")))
+  # plot(polygons)
+  
+  # Create grid
+  
+  gridint <- 1 # Multiplyong factor to increase the resolution of the grid
+  gridx <- (xmax-xmin + 1)*gridint
+  gridy <- round((ymax-ymin +1 )*gridint)
+  grid <- raster::raster(nrows= gridy, ncols=gridx, 
+                         xmn=xmin, 
+                         xmx=xmax, 
+                         ymn=ymin, ymx=ymax)
+
+
+#Using KRIGE fitting to interpolate grid
+
+# fit
+  fit_krig <- fields::Krig(x, y, theta=100)
+  #this part takes too long.
+
+# look at the surface
+# fields::surface(fit_krig, type="C") 
+
+# interpolate to the raster grid
+grid_krig <- raster::interpolate(grid, fit_krig)
+
+# Mask the grid
+grid_krig <- raster::mask(x=grid_krig, mask=polygons)
+
+# Plot the interpolation
+# raster::plot(grid_krig)
+
+# Transform to data frame for ggplot
+
+val <- data.frame(ammonia_fit = raster::getValues(grid_krig))
+xy <- as.data.frame(raster::xyFromCell(grid_krig,1:raster::ncell(grid_krig)))
+grid_ammonia_krig <- bind_cols(xy,val) %>%   
+  mutate(date=as_date(x, origin="2018-01-01"), 
+         ammonia_fit = if_else(ammonia_fit <0,0,ammonia_fit) ) %>%
+  dplyr::rename(depth_m=y) %>% 
+  filter(!is.na(ammonia_fit))
+
+# Plot with ggplot
+  
+ammonia <- ggplot(grid_ammonia_krig, aes(x=date, y=depth_m)) +
+        geom_raster(mapping=aes(fill = ammonia_fit)) + 
+        geom_contour(data = grid_ammonia_krig, mapping = aes(z=ammonia_fit), colour = "blue", 
+                               breaks = c(seq(0.05, 0.35, 0.1))) +
+        scale_fill_distiller(palette = "Spectral") +
+        scale_x_date(limits=c(xmin_gg,xmax_gg),
+                     date_breaks = "1 week", 
+                     date_minor_breaks = "1 day", 
+                     date_labels =  "%d/%m/%y") +
+        scale_y_reverse() +
+        geom_point(data=nutrients_depth, 
+        mapping=aes(x=date, y=depth), size=0.5, color="white") +
+        ggtitle("Ammonia NH4 uM, contours = 0.05, 0.15, 0.25, 0.35")  +
+        xlab("Date") + ylab("Depth (m)") +
+        theme(panel.border = element_rect(colour = "black") ) +
+        theme_bw(scaling_factor) +
+        labs(fill = "NH4 (uM)") +    
+        theme(axis.text=element_text(size=28),
+        axis.title=element_text(size=28,face="bold"),
+        legend.title =element_text(size=28,face="bold"),
+        legend.text = element_text(size=20),        
+        title = element_text(size=28, face = "bold", hjust = 0.5))
+plot(ammonia)
+
+ggsave("../figures/CTD_ammonia.png")
+
+```
+
+#Nitrate (uM) (NO3 uM)  contour plot
+```{r}
+x <- nutrients%>% select (julian_day, depth)
+y <- nutrients$NO3_uM
+
+scaling_factor=15
+
+#Creating polygon and Grid for Raster 
+
+xmin_gg=as.Date("2018-10-22")
+xmax_gg=as.Date("2018-11-19")
+
+xmin <- min(nutrients$julian_day) - 2
+xmax <- max(nutrients$julian_day) + 2
+ymax <- 200
+ymin <- 0
+# Create binding polygon
+
+  x_coord <- c(xmin,
+               xmin,
+               xmax,
+               xmax,
+               xmin)
+  y_coord <- c(ymin,
+               ymax,
+               ymax,
+               ymin,
+               ymin)
+  polygon <- cbind(x_coord, y_coord)
+  polygon <- sp::Polygon(polygon)
+  
+  polygons = sp::SpatialPolygons(list(sp::Polygons(list(polygon), "s1")))
+  # plot(polygons)
+  
+  # Create grid
+  
+  gridint <- 1 # Multiplyong factor to increase the resolution of the grid
+  gridx <- (xmax-xmin + 1)*gridint
+  gridy <- round((ymax-ymin +1 )*gridint)
+  grid <- raster::raster(nrows= gridy, ncols=gridx, 
+                         xmn=xmin, 
+                         xmx=xmax, 
+                         ymn=ymin, ymx=ymax)
+
+
+#Using KRIGE fitting to interpolate grid
+
+# fit
+  fit_krig <- fields::Krig(x, y, theta=100)
+  #this part takes too long.
+
+# look at the surface
+# fields::surface(fit_krig, type="C") 
+
+# interpolate to the raster grid
+grid_krig <- raster::interpolate(grid, fit_krig)
+
+# Mask the grid
+grid_krig <- raster::mask(x=grid_krig, mask=polygons)
+
+# Plot the interpolation
+# raster::plot(grid_krig)
+
+# Transform to data frame for ggplot
+
+val <- data.frame(no3_fit = raster::getValues(grid_krig))
+xy <- as.data.frame(raster::xyFromCell(grid_krig,1:raster::ncell(grid_krig)))
+grid_no3_krig <- bind_cols(xy,val) %>%   
+  mutate(date=as_date(x, origin="2018-01-01"), 
+         no3_fit = if_else(no3_fit <0,0,no3_fit) ) %>%
+  dplyr::rename(depth_m=y) %>% 
+  filter(!is.na(no3_fit))
+
+# Plot with ggplot
+  
+nitrate <- ggplot(grid_no3_krig, aes(x=date, y=depth_m)) +
+        geom_raster(mapping=aes(fill = no3_fit)) + 
+        geom_contour(data = grid_no3_krig, mapping = aes(z=no3_fit), colour = "blue", 
+                               breaks = c(seq(0.5, 4.5, 1))) +
+        scale_fill_distiller(palette = "Spectral") +
+        scale_x_date(limits=c(xmin_gg,xmax_gg),
+                     date_breaks = "1 week", 
+                     date_minor_breaks = "1 day", 
+                     date_labels =  "%d/%m/%y") +
+        scale_y_reverse() +
+        geom_point(data=nutrients_depth, 
+        mapping=aes(x=date, y=depth), size=0.5, color="white") +
+        ggtitle("Nitrate uM, contours = 0.5, 1.5, 2.5, 3.5, 4.5")  +
+        xlab("Date") + ylab("Depth (m)") +
+        theme(panel.border = element_rect(colour = "black") ) +
+        theme_bw(scaling_factor) +
+        labs(fill = "NO3 (uM)") +    
+        theme(axis.text=element_text(size=28),
+        axis.title=element_text(size=28,face="bold"),
+        legend.title =element_text(size=28,face="bold"),
+        legend.text = element_text(size=20),        
+        title = element_text(size=28, face = "bold", hjust = 0.5))
+plot(nitrate)
+
+ggsave("../figures/CTD_nitrate.png")
+
+```
+
+#Silicate (uM) (DRSi uM)  contour plot
+```{r}
+x <- nutrients%>% select (julian_day, depth)
+y <- nutrients$DRSi_uM
+
+scaling_factor=15
+
+#Creating polygon and Grid for Raster 
+
+xmin_gg=as.Date("2018-10-22")
+xmax_gg=as.Date("2018-11-19")
+
+xmin <- min(nutrients$julian_day) - 2
+xmax <- max(nutrients$julian_day) + 2
+ymax <- 200
+ymin <- 0
+# Create binding polygon
+
+  x_coord <- c(xmin,
+               xmin,
+               xmax,
+               xmax,
+               xmin)
+  y_coord <- c(ymin,
+               ymax,
+               ymax,
+               ymin,
+               ymin)
+  polygon <- cbind(x_coord, y_coord)
+  polygon <- sp::Polygon(polygon)
+  
+  polygons = sp::SpatialPolygons(list(sp::Polygons(list(polygon), "s1")))
+  # plot(polygons)
+  
+  # Create grid
+  
+  gridint <- 1 # Multiplyong factor to increase the resolution of the grid
+  gridx <- (xmax-xmin + 1)*gridint
+  gridy <- round((ymax-ymin +1 )*gridint)
+  grid <- raster::raster(nrows= gridy, ncols=gridx, 
+                         xmn=xmin, 
+                         xmx=xmax, 
+                         ymn=ymin, ymx=ymax)
+
+
+#Using KRIGE fitting to interpolate grid
+
+# fit
+  fit_krig <- fields::Krig(x, y, theta=100)
+  #this part takes too long.
+
+# look at the surface
+# fields::surface(fit_krig, type="C") 
+
+# interpolate to the raster grid
+grid_krig <- raster::interpolate(grid, fit_krig)
+
+# Mask the grid
+grid_krig <- raster::mask(x=grid_krig, mask=polygons)
+
+# Plot the interpolation
+# raster::plot(grid_krig)
+
+# Transform to data frame for ggplot
+
+val <- data.frame(si_fit = raster::getValues(grid_krig))
+xy <- as.data.frame(raster::xyFromCell(grid_krig,1:raster::ncell(grid_krig)))
+grid_si_krig <- bind_cols(xy,val) %>%   
+  mutate(date=as_date(x, origin="2018-01-01"), 
+         si_fit = if_else(si_fit <0,0,si_fit) ) %>%
+  dplyr::rename(depth_m=y) %>% 
+  filter(!is.na(si_fit))
+
+# Plot with ggplot
+  
+silicate <- ggplot(grid_si_krig, aes(x=date, y=depth_m)) +
+        geom_raster(mapping=aes(fill = si_fit)) + 
+        geom_contour(data = grid_si_krig, mapping = aes(z=si_fit), colour = "blue", 
+                               breaks = c(seq(0.5, 4.5, 1))) +
+        scale_fill_distiller(palette = "Spectral") +
+        scale_x_date(limits=c(xmin_gg,xmax_gg),
+                     date_breaks = "1 week", 
+                     date_minor_breaks = "1 day",
+                     date_labels =  "%d/%m/%y") +
+        scale_y_reverse() +
+        geom_point(data=nutrients_depth, 
+        mapping=aes(x=date, y=depth), size=0.5, color="white") +
+        ggtitle("Silicate uM, contours = 0.5, 1.5, 2.5, 3.5, 4.5")  +
+        xlab("Date") + ylab("Depth (m)") +
+        theme(panel.border = element_rect(colour = "black") ) +
+        theme_bw(scaling_factor) +
+        labs(fill = "Si (uM)") +    
+        theme(axis.text=element_text(size=28),
+        axis.title=element_text(size=28,face="bold"),
+        legend.title =element_text(size=28,face="bold"),
+        legend.text = element_text(size=20),        
+        title = element_text(size=28, face = "bold", hjust = 0.5))
+plot(silicate)
+
+ggsave("../figures/CTD_silicate.png")
+
+```
+
+
+```{r}
+nutrients_figure <- plot_grid(
+  nitrate, phosphorus, ammonia, silicate, 
+  labels = c("A", "B", "C", "D"), 
+  ncol = 2, nrow = 2,
+  align = "v") 
+
+
+png("../figures/nutrients_combined.png", width = 2000, height = 1500)
+
+
+nutrients_figure
+```
+
