--- a/R/C14 hot.Rmd
+++ b/R/C14 hot.Rmd
@@ -63,7 +63,8 @@ C14_DPM <- readxl::read_excel("../data_used/TAN1810_14C-Pico_25052020_QA_1.0.xls
             cells_sorted = `Cells sorted`, 
             dpm = DPM1,
             SA = `SA_dpm_mL`) %>%
-    filter(population != "Nano" | (population == "Nano" & exp == 8 & sample == "SUR" & vial == "B") | (population == "Nano" & exp == 8 & sample == "SUR" & vial == "D")) %>%
+    filter(population != "Nano") %>%
+  #filter(population != "Nano" | (population == "Nano" & exp == 8 & sample == "SUR" & vial == "B") | (population == "Nano" & exp == 8 & sample == "SUR" & vial == "D")) %>%
     filter(!(exp == 3 & sample == "SUR" & vial == "A" & population == "Pico")) %>%
     filter(!(exp == 2 & sample == "DCM" & vial == "A" & population == "Pico")) %>%
      group_by(cycle, exp, sample, vial, population, cells_sorted) %>% 
@@ -278,6 +279,7 @@ pp_cal_1_join<-full_join(pp_cal_1,pp_cal_nano) %>%
 pp_cal_1_join
 pp_cal_1_join$cycle <- as.character(pp_cal_1_join$cycle) 
 pp_cal_1_join$exp <- as.character(pp_cal_1_join$exp)
+writexl::write_xlsx(pp_cal_1_join,"C14_rates per group.xlsx")
 ```
 
 ## Summary
