--- a/R/QE_CTD and nutrients.Rmd
+++ b/R/QE_CTD and nutrients.Rmd
@@ -1,10 +1,9 @@
 ---
-title: "C14 nutrients"
+ title: "QE_CTD and nutrients"
 author: "Denise Ong"
-date: "3/11/2021"
+date: "3/19/2021"
 output: html_document
 ---
-
 
 ```{r knitr_init, echo=FALSE, cache=FALSE}
 library(knitr)
@@ -36,8 +35,11 @@ library(lubridate)
 library("cowplot")
 library("AquaEnv")
 library("gsw")
+library(ggsci)
+library(RColorBrewer)
 ```
 
+# Nutrients
 # Read table, combine with C14 hot for the cycle, exp and station number.
 ```{r}
 nutrients_raw <- readxl::read_excel("../data_used/TAN1810_nutrients.xls") %>%
@@ -155,16 +157,17 @@ pd <- position_dodge(0.1) # move them .05 to the left and right
 
 nitrate_plot <- nitrate_summary %>%
   ggplot(aes(x=NO3_uM, y=depth, colour=cycle_name)) + 
-    geom_errorbar(aes(xmin=NO3_uM-se, xmax=NO3_uM+se), width=.1, position=pd) +
+    geom_errorbar(aes(xmin=NO3_uM-sd, xmax=NO3_uM+sd), width=.1, position=pd) +
     geom_path() +
     geom_point() +
   scale_y_reverse()+
   theme_bw() +
-  ylab("Depth (m)")+
+  ylab(NULL)+
   xlab(expression(paste("Nitrate (uM)")))+
   labs(colour = "Cycle name")+
-  scale_color_viridis(discrete = TRUE, option = "D")+
-  scale_fill_viridis(discrete = TRUE) 
+  scale_color_brewer(palette = "Dark2")+
+  theme(legend.title =element_text(size=12,face="bold"),
+        legend.text = element_text(size=12))
  
 nitrate_plot
 
@@ -188,10 +191,9 @@ p_plot <- p_summary %>%
   scale_y_reverse()+
   theme_bw() +
   ylab(NULL)+
-  xlab(expression(paste("Phosphorus (uM)")))+
+  xlab(expression(paste("Phosphate (uM)")))+
   labs(colour = "Cycle name")+
-  scale_color_viridis(discrete = TRUE, option = "D")+
-  scale_fill_viridis(discrete = TRUE) 
+  scale_color_jco() 
  
 p_plot
 
@@ -209,7 +211,7 @@ pd <- position_dodge(0.1) # move them .05 to the left and right
 
 si_plot <- si_summary %>%
   ggplot(aes(x=DRSi_uM, y=depth, colour=cycle_name)) + 
-    geom_errorbar(aes(xmin=DRSi_uM-se, xmax=DRSi_uM+se), width=.1, position=pd) +
+    geom_errorbar(aes(xmin=DRSi_uM-sd, xmax=DRSi_uM+sd), width=.1, position=pd) +
     geom_path() +
     geom_point() +
   scale_y_reverse()+
@@ -217,20 +219,151 @@ si_plot <- si_summary %>%
   ylab(NULL)+
   xlab(expression(paste("Silicate (uM)")))+
   labs(colour = "Cycle name")+
-  scale_color_viridis(discrete = TRUE, option = "D")+
-  scale_fill_viridis(discrete = TRUE) 
+scale_color_brewer(palette = "Dark2")
  
 si_plot
 
 ```
 
+# CTD
+# Read table.
+```{r}
+CTD_raw <- readxl::read_excel("../data_used/TK_CTD Downcasts.xlsx") %>%
+  dplyr::rename(CTD = `cast`) %>%
+  mutate(datetime =  dmy_hms(datetime)) %>%
+  filter(!is.na(t)) %>%
+  mutate(date = date(datetime)) %>%
+  mutate(time = hour(datetime)) %>%
+  mutate(julian_day = julian(date, origin = date("2018-01-01"))) %>%
+  filter(time %in% (9:12) ) %>%
+  mutate(t_mean = (t+t2)/2) %>%
+  mutate(s_mean = (s+s2)/2) %>%
+  mutate(os_mean = (os+os2)/2) %>%
+  select(-t, -t2, -s, -s2, -os, -os2) %>%
+  filter(p <= 100)
+CTD_raw
+```
 
 ```{r}
-nutrients_figure <- plot_grid(
+CTD <- CTD_raw %>%
+  mutate(cycle = NA)
+
+CTD$julian_day <- as.character(CTD$julian_day)
+CTD$cycle[grep("297", CTD$julian_day)] = "1"
+CTD$cycle[grep("298", CTD$julian_day)] = "1"
+CTD$cycle[grep("299", CTD$julian_day)] = "1"
+CTD$cycle[grep("300", CTD$julian_day)] = "1"
+CTD$cycle[grep("301", CTD$julian_day)] = "1"
+CTD$cycle[grep("302", CTD$julian_day)] = "1"
+CTD$cycle[grep("305", CTD$julian_day)] = "2"
+CTD$cycle[grep("306", CTD$julian_day)] = "2"
+CTD$cycle[grep("307", CTD$julian_day)] = "2"
+CTD$cycle[grep("308", CTD$julian_day)] = "2"
+CTD$cycle[grep("309", CTD$julian_day)] = "2"
+CTD$cycle[grep("311", CTD$julian_day)] = "3"
+CTD$cycle[grep("312", CTD$julian_day)] = "3"
+CTD$cycle[grep("313", CTD$julian_day)] = "3"
+CTD$cycle[grep("315", CTD$julian_day)] = "4"
+CTD$cycle[grep("316", CTD$julian_day)] = "4"
+CTD$cycle[grep("317", CTD$julian_day)] = "4"
+CTD$cycle[grep("319", CTD$julian_day)] = "5"
+CTD$cycle[grep("320", CTD$julian_day)] = "5"
+
+CTD <- CTD %>% mutate(cycle_name = recode(cycle, "1" = "Subantarctic 1",
+                                    "2" = "Subantarctic 2",
+                                    "3" = "Subtropical 1",
+                                    "4" = "Subtropical 2",
+                                    "5" = "Subantarctic 3")) 
+#CTD$cycle_name <- factor(CTD$cycle_name,levels = c("Subtropical 1", "Subtropical 2", "Subantarctic 1", "Subantarctic 2", "Subantarctic 3")) 
+
+CTD <- CTD %>%
+    filter(!is.na(cycle)) #remove rows without cycle number
+
+```
+Plot temperature
+
+```{r}
+#summarise temp data
+temp_summary <- summarySE(CTD, measurevar="t_mean", groupvars=c("p","cycle_name"), na.rm=TRUE)
+temp_summary
+
+pd <- position_dodge(0.1) # move them .05 to the left and right
+
+temp_plot <- temp_summary %>%
+  ggplot(aes(x=t_mean, y=p, colour=cycle_name)) + 
+    geom_errorbar(aes(xmin=t_mean-sd, xmax=t_mean+sd), width=.1, position=pd) +
+    geom_path() +
+    geom_point(size=0.5) +
+  scale_y_reverse()+
+  theme_bw() +
+  ylab("Depth (m)")+
+  xlab(expression(paste("Temperature (",degree,"C)")))+
+  labs(colour = "Cycle name")+
+scale_color_brewer(palette = "Dark2")
+ 
+temp_plot
+
+```
+
+Plot salinity
+
+```{r}
+#summarise salinity data
+s_summary <- summarySE(CTD, measurevar="s_mean", groupvars=c("p","cycle_name"), na.rm=TRUE)
+s_summary
+
+pd <- position_dodge(0.1) # move them .05 to the left and right
+
+s_plot <- s_summary %>%
+  ggplot(aes(x=s_mean, y=p, colour=cycle_name)) + 
+    geom_errorbar(aes(xmin=s_mean-sd, xmax=s_mean+sd), width=.1, position=pd) +
+    geom_path() +
+    geom_point(size=0.5) +
+  scale_y_reverse()+
+  theme_bw() +
+  ylab(NULL)+
+  xlab("Salinity")+
+scale_color_brewer(palette = "Dark2")
+s_plot
+
+```
+#Nitrate: silicate ratio
+high ratio -> 
+```{r}
+nutrients
+nutrients <- nutrients %>%
+  mutate(ni_si=NO3_uM/DRSi_uM)
+nutrients
+
+test_summary <- summarySE(nutrients, measurevar="ni_si", groupvars=c("depth","cycle_name"), na.rm=TRUE)
+test_summary
+
+pd <- position_dodge(0.1) # move them .05 to the left and right
+
+test_plot <- test_summary %>%
+  ggplot(aes(x=ni_si, y=depth, colour=cycle_name)) + 
+    geom_errorbar(aes(xmin=ni_si-sd, xmax=ni_si+sd), width=.1, position=pd) +
+    geom_path() +
+    geom_point() +
+  scale_y_reverse()+
+  theme_bw() +
+  ylab(NULL)+
+  xlab(expression(paste("Nitrate:Silicate")))+
+  labs(colour = "Cycle name")+
+  scale_color_brewer(palette = "Dark2")
+test_plot
+
+```
+
+```{r}
+combined_figure <- plot_grid(
+  temp_plot+ theme(legend.position="none"),
+  s_plot+ theme(legend.position="none"),
   nitrate_plot+ theme(legend.position="none"), 
-  p_plot+ theme(legend.position="none"), 
+  #p_plot+ theme(legend.position="none"), 
   si_plot+ theme(legend.position="none"),
-  labels = c("A", "B", "C"), 
+  test_plot + theme(legend.position="none"),
+  labels = c("A", "B", "C", "D", "E"), 
   align = 'vh',
   hjust = -1,
   nrow = 1) 
@@ -244,39 +377,8 @@ legend_b <- get_legend(
 
 # add the legend underneath the row we made earlier. Give it 10%
 # of the height of one plot (via rel_heights).
-nutrients_figure <- plot_grid(nutrients_figure, legend_b, ncol = 1, rel_heights = c(1, .1))
-nutrients_figure
-ggsave("../figures/nutrients_line.png")
-
-```
-
-#Nitrate: silicate ratio
-high ratio -> 
-```{r}
-nutrients
-test <- nutrients %>%
-  mutate(ni_si=NO3_uM/DRSi_uM)
-test
-
-test_summary <- summarySE(test, measurevar="ni_si", groupvars=c("depth","cycle_name"), na.rm=TRUE)
-test_summary
-
-pd <- position_dodge(0.1) # move them .05 to the left and right
-
-test_plot <- test_summary %>%
-  ggplot(aes(x=ni_si, y=depth, colour=cycle_name)) + 
-    geom_errorbar(aes(xmin=ni_si-se, xmax=ni_si+se), width=.1, position=pd) +
-    geom_path() +
-    geom_point() +
-  scale_y_reverse()+
-  theme_bw() +
-  ylab(NULL)+
-  xlab(expression(paste("Nitrate:Silicate")))+
-  labs(colour = "Cycle name")+
-  scale_color_viridis(discrete = TRUE, option = "D")+
-  scale_fill_viridis(discrete = TRUE) 
- 
-test_plot
-
+combined_figure <- plot_grid(combined_figure, legend_b, ncol = 1, rel_heights = c(1, .1))
+png("../figures/combined_physical_QE.png", width = 1000, height = 500)
+combined_figure
 ```
 
